--- a/sub1/박소현/0901/1강_과제_빅데이터(분석) 사전학습 강의.md
+++ b/sub1/박소현/0901/1강_과제_빅데이터(분석) 사전학습 강의.md
@@ -1,4 +1,4 @@
-# wordcount1char.java 과제
+# 사전학습 강의영상 1강_과제
 
 > 각 단어의 첫 char만을 가지고 카운트하는 과제
 
@@ -71,13 +71,10 @@ hadoop jar ssafy.jar wordcount1char wordcount_test wordcount_test_out
 ```bash
 $ hdfs dfs -cat wordcount_test_out/part-r-00000|more
 ```
-
 <img src = "/uploads/d3811953e93bc78465a28db512680f67/image.png" width="60%" height="60%">
 
 ```bash
 $ hdfs dfs -cat wordcount_test_out/part-r-00001|more
 ```
-
 <img src = "/uploads/243d6195abd9508d56d71342822db9df/image.png" width="60%" height="60%">
 
-   
